--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -3,7 +3,7 @@ menu "KernelSU"
 config KSU
 	tristate "KernelSU function support"
 	depends on OVERLAY_FS
-	default y
+	default n
 	help
 	  Enable kernel-level root privileges on Android System.
 	  To compile as a module, choose M here: the
@@ -19,7 +19,7 @@ config KSU_DEBUG
 config KSU_MANUAL_SU
 	bool "Use manual su"
 	depends on KSU
-	default y
+	default n
 	help
 	  Use manual su and authorize the corresponding command line and application via prctl
 
@@ -37,7 +37,7 @@ config KPM
 choice
     prompt "KernelSU hook type"
     depends on KSU
-    default KSU_KPROBES_HOOK
+    default KSU_MANUAL_HOOK
     help
       Hook type for KernelSU
 
